--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="flowerStyle.css">
+    <script src="https://kit.fontawesome.com/01192990f6.js" crossorigin="anonymous"></script>
     <title>Flower Shop</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-greeting">
+                    Let's make beautiful flowers a part of your life.
+                </h1>
+                <p class="banner-description">
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
+                </p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <img class="flower-pic" src="Flower Asset/pngwing 10.png" alt="pngwing flower pic">
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
