--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         </div>
     </header>
     <main>
-
+        <!--Our feature Flower -->
+        <section>
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p id="feature-flowers" class="section-description">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            </p>
+        </section>
     </main>
     <footer>
 
