--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <script src="https://kit.fontawesome.com/01192990f6.js" crossorigin="anonymous"></script>
     <title>Flower Shop</title>
 </head>
+
 <body>
     <header class="header">
         <div class="banner">
@@ -19,7 +21,9 @@
                     Let's make beautiful flowers a part of your life.
                 </h1>
                 <p class="banner-description">
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.
                 </p>
                 <button class="btn-primary">Shop Now</button>
             </div>
@@ -31,12 +35,38 @@
         <section>
             <h3 class="section-title">Our Featured Flowers</h3>
             <p id="feature-flowers" class="section-description">
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.
             </p>
+
+            <div class="flower-container">
+                <div>
+                    <div id="pngwing6" class="flower">
+                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
+                    </div>
+                    <p><a href="#" class="flower-link">Pink Flower Tree</a></p>
+                </div>
+
+                <div>
+                    <div id="pngwing6" class="flower">
+                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
+                    </div>
+                    <p><a href="#" class="flower-link">Pink Flower Tree</a></p>
+                </div>
+
+                <div>
+                    <div id="pngwing6" class="flower">
+                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
+                    </div>
+                    <p class="flower-link"><a href="#">Pink Flower Tree</a></p>
+                </div>
+
+            </div>
         </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
