--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <!--Our feature Flower -->
-        <section>
+        <!-- <section>
             <h3 class="section-title">Our Featured Flowers</h3>
             <p id="feature-flowers" class="section-description">
                 It is a long established fact that a reader will be distracted by the readable content of a page when
@@ -62,7 +62,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
 
