feature flowers added

--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
     </header>
     <main>
         <!--Our feature Flower -->
-        <!-- <section>
+        <section>
             <h3 class="section-title">Our Featured Flowers</h3>
-            <p id="feature-flowers" class="section-description">
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout.
+            <p class="section-description">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when looking at its layout.
             </p>
 
             <div class="flower-container">
-                <div>
-                    <div id="pngwing6" class="flower">
-                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
-                    </div>
-                    <p><a href="#" class="flower-link">Pink Flower Tree</a></p>
+                <div class="flower">
+                    <img src="Flower Asset/pngwing 6.png" alt="pngwing6"   id="pngwing6">
+                    <p> <a href="" class="flower-link">Pink Flower Tree</a>
+
+                    </p>
+                </div>
+                <div class="flower">
+                    <img src="Flower Asset/pngwing 5.png" alt="pngwing5"  id="pngwing5">
+                    <p> <a href="" class="flower-link">Pink Flower Tree</a>
+
+                    </p>
+                </div>
+                <div class="flower">
+                    <img src="Flower Asset/pngwing 7.png" alt="pngwing7" id="pngwing7">
+                    <p> <a href="" class="flower-link">Pink Flower Tree</a>
+
+                    </p>
                 </div>
 
-                <div>
-                    <div id="pngwing6" class="flower">
-                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
-                    </div>
-                    <p><a href="#" class="flower-link">Pink Flower Tree</a></p>
-                </div>
+                
 
-                <div>
-                    <div id="pngwing6" class="flower">
-                        <img src="Flower Asset/pngwing 6.png" alt="Pink Flower Tree" class="flowerimg">
-                    </div>
-                    <p class="flower-link"><a href="#">Pink Flower Tree</a></p>
-                </div>
 
-            </div>
-        </section> -->
+        </section>
     </main>
     <footer>
 
