--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <!--Our feature Flower -->
+        <!--Our feature Flowers -->
         <section>
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="section-description">
@@ -61,7 +61,24 @@
             </div>
 
         </section>
-        
+
+        <section>
+            <div class="feature feature-info-container">
+                <div class="feature-info">
+                    <img src="Flower Asset/Group 57.png" alt="Group 57">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="feature-info">
+                    <img src="Flower Asset/Group 59.png" alt="Group 59">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="feature-info">
+                    <img src="Flower Asset/Group 58.png" alt="Group 58">
+                    <p>Same Day Delivery. Click & Collect.</p>
+                </div>
+            </div>
+
+        </section>
 
         <div class="hotdeal">
             <div class="hotdeal-content">
@@ -69,11 +86,12 @@
                     Hot Deal ! Sale Up To 25% <span class="flowerfontstyle">Off</span>
                 </h4>
                 <p class="hotdeal-description">
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.
                 </p>
                 <button class="btn-primary">Sign Up</button>
             </div>
-            <div class="hotdeal-flower-pic"><img  src="Flower Asset/pngwing 8.png" alt="pngwing 8"></div>
+            <div class="hotdeal-flower-pic"><img src="Flower Asset/pngwing 8.png" alt="pngwing 8"></div>
         </div>
 
         <!-- Instagram content -->
