--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-            <img class="flower-pic" src="Flower Asset/pngwing 10.png" alt="pngwing flower pic">
+            <img class="flower-pic" src="Flower-Asset/pngwing 10.png" alt="pngwing flower pic">
         </div>
     </header>
     <main>
@@ -41,19 +41,19 @@
 
             <div class="flower-container">
                 <div class="flower">
-                    <img src="Flower Asset/pngwing 6.png" alt="pngwing6" id="pngwing6">
+                    <img src="Flower-Asset/pngwing 6.png" alt="pngwing6" id="pngwing6">
                     <p> <a href="" class="flower-link">Pink Flower Tree</a>
 
                     </p>
                 </div>
                 <div class="flower">
-                    <img src="Flower Asset/pngwing 5.png" alt="pngwing5" id="pngwing5">
+                    <img src="Flower-Asset/pngwing 5.png" alt="pngwing5" id="pngwing5">
                     <p> <a href="" class="flower-link">Pink Flower Tree</a>
 
                     </p>
                 </div>
                 <div class="flower">
-                    <img src="Flower Asset/pngwing 7.png" alt="pngwing7" id="pngwing7">
+                    <img src="Flower-Asset/pngwing 7.png" alt="pngwing7" id="pngwing7">
                     <p> <a href="" class="flower-link">Pink Flower Tree</a>
 
                     </p>
@@ -65,15 +65,15 @@
         <section>
             <div class="feature feature-info-container">
                 <div class="feature-info">
-                    <img src="Flower Asset/Group 57.png" alt="Group 57">
+                    <img src="Flower-Asset/Group 57.png" alt="Group 57">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="feature-info">
-                    <img src="Flower Asset/Group 59.png" alt="Group 59">
+                    <img src="Flower-Asset/Group 59.png" alt="Group 59">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="feature-info">
-                    <img src="Flower Asset/Group 58.png" alt="Group 58">
+                    <img src="Flower-Asset/Group 58.png" alt="Group 58">
                     <p>Same Day Delivery. Click & Collect.</p>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                 </p>
                 <button class="btn-primary">Sign Up</button>
             </div>
-            <div class="hotdeal-flower-pic"><img src="Flower Asset/pngwing 8.png" alt="pngwing 8"></div>
+            <div class="hotdeal-flower-pic"><img src="Flower-Asset/pngwing 8.png" alt="pngwing 8"></div>
         </div>
 
         <!-- Instagram content -->
@@ -104,21 +104,34 @@
 
             <div class="instra-container">
                 <div class="flower">
-                    <img src="Flower Asset/Flower 01.png" alt="Flower 1">
+                    <img src="Flower-Asset/Flower 01.png" alt="Flower 1">
                 </div>
                 <div class="flower">
-                    <img src="Flower Asset/Rectangle 4.png" alt="Rectangle 4">
+                    <img src="Flower-Asset/Rectangle 4.png" alt="Rectangle 4">
                 </div>
                 <div class="flower">
-                    <img src="Flower Asset/Rectangle 5.png" alt="Rectangle 5">
+                    <img src="Flower-Asset/Rectangle 5.png" alt="Rectangle 5">
                 </div>
                 <div class="flower">
-                    <img src="Flower Asset/Rectangle 6.png" alt="Rectangle 6">
+                    <img src="Flower-Asset/Rectangle 6.png" alt="Rectangle 6">
                 </div>
+            </div>
+        </section>
+
+        <section class="getthedeal">
+            <div class="getthedeal-info getthedealfeature">
+                <h3 class="section-title" id="getthedeal-title">Get The Latest Deals</h3>
+                <p class="section-description ">$30 coupon for first shopping</p>
+                <form class="contact">
+                    <input type="email" name="" id="" placeholder="Enter your email here...">
+                    <input type="button" value="Subscribe" class="btn-primary">
+                </form>
             </div>
 
 
+
         </section>
+
     </main>
     <footer>
 
