--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
 
     </main>
     <footer>
+        <div>
+            <h2 class="footer-title"> <span class="flowerfontstyle">Flower</span>Shop</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable
+                <br>content of a page when looking at its layout.</p>
+            <p id="copyright"> <small>@2020-2023, FlowerShop.com. All rights reserved. </small> </p>
+        </div>
 
     </footer>
 </body>
