navbar added & closing the assignment

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 <body>
     <header class="header">
+        <nav>
+            <h2 class="nav-title"> <span class="flowerfontstyle">Flower</span>Shop</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Flower care</a></li>
+                <li><a href="">About</a> </li>
+                <li><a href="">Contact us</a></li>
+            </ul>
+        </nav>
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-greeting">
